# piu_quests

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.claude/commands/: git-make-pr.md  git-merge-pr.md  git-start-feature.md
app/backend/: .env.example  .gitignore  README.md  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0daeba5f2cc5_initial.py  cc4b5dcdd857_add_kakao_id_make_google_id_nullable.py  f464dcce400d_add_record_items_restructure_photos.py
app/backend/app/: main.py
app/backend/app/core/: auth.py  config.py  database.py
app/backend/app/models/: __init__.py  chart.py  participant.py  photo.py  quest.py  record.py  record_item.py  user.py
app/backend/app/routers/: photos.py  quests.py  records.py  users.py
app/backend/app/schemas/: quest.py  record.py  user.py
app/backend/app/services/: participant.py  storage.py  vision.py
app/backend/tests/: conftest.py  test_photos.py  test_quests.py  test_records.py  test_users.py  test_vision.py
app/frontend/: README.md  package-lock.json  package.json
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
app/frontend/src/app/settings/: page.tsx
app/frontend/src/components/: DatePicker.tsx  LoginModal.tsx  Navbar.tsx  PhotoModal.tsx  RegisterModal.tsx  SubmitModal.tsx
app/frontend/src/hooks/: useInAppBrowser.ts  useQuest.ts  useRecord.ts  useUser.ts
app/frontend/src/lib/: api.ts  auth.ts  constants.ts
app/frontend/src/types/: index.ts  next-auth.d.ts
specs/: Desigh Specs.md  Project Rules.md  Project Specs.md
specs/features/: Login.md
(+4 files in other folders)
